feat(demo): change requests (#893)

--- a/EMS/core-bundle/src/Resources/views/macros/data-field-type.html.twig
+++ b/EMS/core-bundle/src/Resources/views/macros/data-field-type.html.twig
@@ -1095,6 +1095,7 @@
 			{%- if displayOptions.display_template|default(false) -%}
 				{%- set rawData = dataField.rawData -%}
 				{%- set data = choices|default([])|filter( (id, label) => rawData is iterable ? id in rawData : id == rawData) -%}
+				{%- set dataItems = items|default([])|filter( item => rawData is iterable ? item.id in rawData : item.id == rawData)|reverse|reverse -%}
 
 				{%- if doCompare -%}
 					{%- set compareRawData = attribute(compareRawData, dataField.fieldType.name)|default(false) -%}
@@ -1102,15 +1103,16 @@
 						<div class="col-md-6 bg-gray-light">
 							{%- if compareRawData -%}
 								{%- set compareData = choices|default([])|filter( (id, label) => compareRawData is iterable ? id in compareRawData : id == compareRawData) -%}
-								{{- displayOptions.display_template|generate_from_template({ data: compareData, dataField: dataField, choices: choices })|raw -}}
+								{%- set compareItems = items|default([])|filter( item => compareRawData is iterable ? item.id in compareRawData : item.id == compareRawData)|reverse|reverse -%}
+								{{- displayOptions.display_template|generate_from_template({ data: compareData, items: compareItems, dataField: dataField, choices: choices })|raw -}}
 							{%- endif -%}
 						</div>
 						<div class="col-md-6 bg-gray-light">
-							{{- displayOptions.display_template|generate_from_template({ data: data, dataField: dataField, choices: choices })|raw -}}
+							{{- displayOptions.display_template|generate_from_template({ data: data, items: dataItems, dataField: dataField, choices: choices })|raw -}}
 						</div>
 					</div>
 				{%- else -%}
-					{{- displayOptions.display_template|generate_from_template({ data: data, dataField: dataField, choices: choices|default([]) })|raw -}}
+					{{- displayOptions.display_template|generate_from_template({ data: data, items: dataItems, dataField: dataField, choices: choices|default([]) })|raw -}}
 				{%- endif -%}
 			{%- else -%}
 				{%- set diffChoice = diff_choice(dataField.rawData, choiceLabels|default([]), choiceValues|default([]), compare, dataField.fieldType.name, compareRawData) -%}
