--- a/demo/skeleton/template_ems/dashboard/json_menu_nested.twig
+++ b/demo/skeleton/template_ems/dashboard/json_menu_nested.twig
@@ -60,10 +60,12 @@
 {%- block jmn_button_item_more_menu -%}
     <li>{{ template.block('jmn_button_item_view', _context)|raw }}</li>
     <li>{{ template.block('jmn_button_item_edit', _context)|raw }}</li>
-    {% if item.children|length == 0 %}
+    {%- if item.type == 'page' and pageInfo -%}
         <li>
-            <button class="btn-detach-page" data-item-id="{{ item.id }}" data-page-id="{{ page.id }}">Detach page</button>
+            <button class="btn-detach-page" data-item-id="{{ item.id }}" data-page-id="{{ pageInfo.id.ouuid }}">Detach page</button>
         </li>
+    {% elseif item.children|length == 0 %}
+        <li>{{- template.block('jmn_button_item_delete', _context)|raw -}}</li>
     {% endif %}
 {%- endblock jmn_button_item_more_menu -%}
 
@@ -176,7 +178,7 @@
 {% block modal_existing_page_body %}
     {% set columns = [
         { "label": "Select", "template": (block('table_existing_column_select')) },
-        { "label": "Page", "template": (block('table_existing_column_label')), "orderField": "label.alpha_order" },
+        { "label": "Label (Page)", "template": (block('table_existing_column_label')), "orderField": "label.alpha_order" },
         { "label": "Live", "template": (block('table_existing_column_live')) },
         { "label": "Last Update", "template": (block('table_existing_column_last_update')), "orderField": "_finalization_datetime" },
     ] %}
