fix: only attach home item for main menu
Added a new field, for flagging: that the menu contains the home item.

--- a/demo/skeleton/template_ems/content_type/compute_paths.twig
+++ b/demo/skeleton/template_ems/content_type/compute_paths.twig
@@ -19,7 +19,7 @@
             {% endfor %}
 
             {% for locale in locales|filter(locale => attribute(path, locale)|length > 0 and null not in attribute(path, locale)) %}
-                {% if homeAttached == false and attribute(item.object, locale).title|default|ems_webalize != 'home' %}
+                {% if homeAttached == false and _source.is_main|default(false) == true and attribute(item.object, locale).title|default|ems_webalize != 'home' %}
                     {% set paths = paths|merge([{
                         'uid': (item.id),
                         'path' : "home",
