--- a/demo/skeleton/template_ems/dashboard/json_menu_nested.twig
+++ b/demo/skeleton/template_ems/dashboard/json_menu_nested.twig
@@ -114,7 +114,7 @@
                         <i class="fa fa-eye"></i>&nbsp;View
                     </button>
                     <ul class="dropdown-menu pull-right">
-                        {% set path = item.path|map(p => attribute(p.object, locale).title|ems_webalize) %}
+                        {% set path = item.path|map(p => attribute(p.object, locale).title|slug) %}
                         {% for env in environments|filter(e => pageInfo.published(e.name)) %}
                             <li>
                                 <a href="/channel/{{ env.name }}/{{ locale }}/{{ path|join('/') }}" target="_blank">
