--- a/demo/skeleton/template_ems/dashboard/sitemap.twig
+++ b/demo/skeleton/template_ems/dashboard/sitemap.twig
@@ -35,6 +35,7 @@
                         'field_path': '[structure]',
                         'template': '@EMSCH/template_ems/dashboard/json_menu_nested.twig',
                         'context_block': 'build_context',
+                        'active_item_id': app.request.get('activeItemId')|default(null),
                         'context': {
                             'sectionLabel': section._source.label,
                             'locale': locale
@@ -62,12 +63,7 @@
 {%  block ems_footer %}
     <script>
         window.addEventListener('emsReady', function () {
-            let url = new URL(window.location.href)
-            let activeItemId = url.searchParams.get('activeItemId');
-
             Object.values(window.jsonMenuNestedComponents).forEach((jmn) => {
-                if (activeItemId) jmn.load({ activeItemId: activeItemId });
-
                 jmn.element.addEventListener('jmn-load', (event) => onJmnLoad(jmn, event));
                 jmn.element.addEventListener('jmn-add', (event) => onJmnAdd(jmn, event));
                 jmn.element.addEventListener('jmn-modal-custom', (event) => onJmnModalCustom(jmn, event));
