--- a/EMS/core-bundle/src/Resources/views/form/forms.html.twig
+++ b/EMS/core-bundle/src/Resources/views/form/forms.html.twig
@@ -112,7 +112,7 @@
     {%- set value = attribute(line.data, column.attribute)|default(false) -%}
     {%- if value and column.valid(line.data)  -%}
         {{- block('emsco_form_table_column_data_label_prefix') -}}
-        {{- value|trans({}, column.domain) -}}
+        {{- (column.keyPrefix|default('') ~ value)|trans({}, column.domain) -}}
         {{- block('emsco_form_table_column_data_label_suffix') -}}
     {%- endif -%}
 {% endblock emsco_form_table_column_data_value_translation %}
